--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         
     </div>
+    <h1 align="center">Maulik Patadiya</h1>
     
     <script>
         function myFunction(){
